--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -11,7 +11,7 @@
       <input type="text" id="player-name" placeholder="Type your name and hit next to begin" class="hidden-el"> <br />
       
       <div class="error">Error!</div>
-      <input id="btn_submit_name" data-package='{"name": "#player-name"}' class="btn btn-default submit_name hidden-el" type="submit" name="submit" value="Next!">
+      <input id="btn_submit_name" data-package='{"name": "#player-name"}' maxlength="10" class="btn btn-default submit_name hidden-el" type="submit" name="submit" value="Next!">
     </div>
     <div class="login-footer">
       <section id="description">
@@ -52,7 +52,7 @@
       <h3 class="white">Select a Deck</h3>
       <div class="form-prompt">Your deck will determine what problems you solve and what roles you get to play.</div>
       
-      <div class="decks-prompt">Swipe left and right to switch decks</div>
+      <div class="decks-prompt">Use arrow keys or swipe left and right to switch decks</div>
       <section id="decks" class="glide">
 
       </section>
