Resolved a few timer transition/preview issues, added correct deliberate phase screens, scoreboard fix.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -758,6 +758,15 @@ blockquote.speech {
   }
 }
 
+
+.timer_wrap {
+	button {
+		right: 45%;
+		bottom: inherit;
+    font-size: 17px;
+	}
+}
+
 // Scoreboard 
 #scoreboard {
 
