tweaked text padding/media queries for display on large desktop screens

--- a/public/styles/_core/homepage.scss
+++ b/public/styles/_core/homepage.scss
@@ -343,13 +343,22 @@ a:hover{
 		.flow-play-para{
 			text-align: justify;
 				text-justify: inter-word;
-	-moz-hyphens: auto;
-	-webkit-hyphens:auto;
-	hyphens: auto;
-	hyphenate-before: 2;
-	hyphenate-after:2;
+			-moz-hyphens: auto;
+			-webkit-hyphens:auto;
+			hyphens: auto;
+			hyphenate-before: 2;
+			hyphenate-after:2;
 			text-align-last: center;
 			color: $type-black;
+
+			@media(min-width: 2000px)
+			{
+				padding: 0 20px;
+			}
+			@media(min-width: 2250px)
+			{
+				padding: 0 40px;
+			}
 		}
 		.play-pic{
 			display: block;
@@ -437,6 +446,14 @@ a:hover{
 			hyphens: auto;
 			hyphenate-before: 2;
 			hyphenate-after:2;
+			}
+			@media(min-width: 2000px)
+			{
+				padding: 0 20px;
+			}
+			@media(min-width: 2250px)
+			{
+				padding: 0 60px;
 			}
 		}
 	}
