--- a/templates/partials/shared/doubledown.hbs
+++ b/templates/partials/shared/doubledown.hbs
@@ -7,7 +7,7 @@
 		{{> component/instructions
 				decider=true 
 				heading="Read the text in the blue box outloud"
-				body="Once you have finished speaking the instructions to other players, press next to continue."
+				body="Once you finish speaking, press next to continue"
 		}}
 
 		{{> component/instructions
@@ -16,11 +16,59 @@
 
 		{{> component/speech 
 				decider=true
-				body="This is the double-down phase!"
+				body="In the double down phase, Stakeholders can pay 100 coins to speak uninterupted for 30 seconds. The decider and other stakeholders cannot speak without permission."
 		}}
 
 		{{> component/speech
-				body="This is the double-down phase!"
+				body="In the double down phase, Stakeholders can pay 100 coins to speak uninterupted for 30 seconds. The decider and other stakeholders cannot speak without permission."
+		}}
+
+	</div>
+
+	{{!-- INSTRUCTIONS --}}
+	<div class="screen">
+		
+		{{> component/instructions
+				decider=true 
+				heading="Read the text in the blue box outloud"
+				body="Once you finish speaking, press next to continue"
+		}}
+
+		{{> component/instructions
+				heading="Listen to the decider"
+		}}
+
+		{{> component/speech 
+				decider=true
+				body=(combine "Once a stakeholder's " config.doubledownSeconds " seconds are over the next player gets the option to buy time, moving from player to player until all players pass or run out of coins.")
+		}}
+
+		{{> component/speech
+				body=(combine "Once a stakeholder's " config.doubledownSeconds " seconds are over the next player gets the option to buy time, moving from player to player until all players pass or run out of coins")
+		}}
+
+	</div>
+
+	{{!-- INSTRUCTIONS 2 --}}
+	<div class="screen">
+		
+		{{> component/instructions
+				decider=true 
+				heading="Read the text in the blue box outloud"
+				body="Once you finish speaking, press next to continue"
+		}}
+
+		{{> component/instructions
+				heading="Listen to the decider"
+		}}
+
+		{{> component/speech 
+				decider=true
+				body="Stakeholders can use this time to double down on their proposals, ask questions of others, or any other way they wish. Remember, no one else is allowed to speak unless requested!"
+		}}
+
+		{{> component/speech
+				body="Stakeholders can use this time to double down on their proposals, ask questions of others, or any other way they wish. Remember, no one else is allowed to speak unless requested!"
 		}}
 
 	</div>
@@ -28,25 +76,30 @@
 	{{!-- COUNTDOWN START --}}
 	{{!-- this is where phase re-starts for subsequent players --}}
 	<div class="screen restart">
-
+		
 		{{> component/instructions
 				decider=true 
-				heading="Press the button to start the timer"
-				body="Make sure the player pitching is ready and understands the instructions, then start the timer."
+				heading="Read the text in the blue box outloud"
+				body="Remind the player whose deciding that they need to choose to buy time or pass."
 		}}
 
 		{{!-- active player --}}
-		{{> component/instructions 
+		{{> component/instructions
 				active_player=player.isActive
-				heading="It’s your turn! Get ready to pitch!"
-				body="Wait for the decider to start the timer. You will have 60 seconds, with the ability to buy another 30."
+				heading="Choose an option below"
+				body="Please select buy time  or to pass by pressing one of the buttons below."
 		}}
 
 		{{!-- inactive player --}}
 		{{> component/instructions 
 				inactive_player=player.isInactive
-				heading="Listen to the other player’s proposal"
-				body="Take notes on other player’s proposals so you can better engage critically during deliberation!"
+				heading="Waiting for player to make a decision"
+		}}
+
+		{{> component/speech 
+				decider=true
+				decider_next_disabled=true
+				body=(combine activePlayer.username ", you should see the option to buy time, or pass to the next player, on your screen now. If you do, your time will start immediately. I will remind you when your time is up.")
 		}}
 
 		{{> component/timer
@@ -57,10 +110,35 @@
 		{{!-- choice box for buying more time --}}
 		{{> component/choice 
 				active_player=player.isActive
-				all_players=true
 				doubledown=true
 		}}
 
+
+	</div>
+
+	{{!-- END --}}
+	<div class="screen">
+		
+		{{> component/instructions
+				decider=true 
+				heading="Read the text in the blue box outloud"
+				body="Once you finish speaking, press next to continue"
+		}}
+
+		{{> component/instructions
+				heading="Listen to the decider"
+				body=(combine "You made it through round " round "! Time to see how you scored!")
+		}}
+
+		{{> component/speech 
+				decider=true
+				advance=true
+				body="All right! Now that all players have passed, its time to go on to the decide phase where I will select a winner!"
+		}}
+
+		{{> component/speech
+				body="All right! Now that all players have passed, its time to go on to the decide phase where I will select a winner!"
+		}}
 
 	</div>
 	
