add max length to player name update decider buttons fix skip rules button

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -393,9 +393,9 @@ input.post-button {
 	&#more-time-wrapper {
 
 		#btn-more-time {
-			line-height: 50px;
+			line-height: 64x;
 			background-color: $blue-light;
-			background-size: 50px 50px;
+			background-size: 60px 60px;
 			background-position: 3px center;
 			background-repeat: no-repeat;
 			background-image: url("http://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/layout/coin_stroke.png");
@@ -403,7 +403,7 @@ input.post-button {
 			.coins {
 		    position: relative;
 				float: left;   
-				padding-left: 16px;
+				padding-left: 21px;
 				font-size: 16px;
 			}
 		}
