--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -9,7 +9,7 @@
 	{{/ifeq}}
 
 	{{!-- ROLE CARDS --}}
-	<div class="screen {{#ifnoteq round '1'}}initial{{/ifnoteq}}">
+	<div class="screen {{#ifnoteq round '1'}}initial{{else}}skip-rules{{/ifnoteq}}">
 
 		{{> component/instructions 
 				decider=true
