--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -3,7 +3,7 @@
 	<div class="secondary-rule">...and is driven by a real issues such as education, civic engagement, environmentalism, etc.</div>
   <div class="rules-image">{{!-- <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743645/at-stake/layout/pot_stroke.png"> --}}</div>
   <div class="form">
-    <button class="skip submit {{showHide this}}" data-event="game:next">skip rules</button>
+    <button class="skip submit {{showHide this}}" data-event="game:skip_rules">skip rules</button>
 		<button class="next-step submit {{showHide this}}" data-event="{{nextEvent this}}">next</button>
 	</div>
 </div>
