--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -77,6 +77,7 @@
 		'game:next_screen',
 		'game:next_round',
 		'game:next_item',
+		'game:skip_rules',
 		'game:ending',
 		'game:ended',
 		'game:end',
@@ -318,7 +319,7 @@
 	                    trailWidth: 0.8,
 	                    fill: '#ff3d6b',
 	                    text: {
-	                        value: $(timerPreview[0]).data('duration')
+	                      value: $(timerPreview[0]).data('duration')
 	                    }
 	              }
 	            );
