--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -103,7 +103,7 @@
       <div id="game_code"> 
         <h1>Share Your Room Code</h1>
         <h1 class="access-code"></h1>
-        <p class="instructions">Share the 4 digit code with other players so they can join your game. When ready, press start to begin.</p>
+        <p class="instructions">Share the 4 digit code with other players so they can join the game.</p>
       </div>
       <div class="player-grid">
         <div class="row list">
