--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -552,18 +552,15 @@ socketEvents = function(eventId, eventData) {
             // Close "(playername) is deciding...." modal
             var modal = $('#more-time-wrapper');
           
-            modal.fadeOut(function() {
+            modal.fadeOut(500, function() {
                 $('#overlay').empty().hide();
                 $('#btn-next-player').fadeIn();
-            }, 1000);
+            });
 
-            if(eventData.phase === 'pitch' && eventData.end && isDecider)
-                nextPhaseScreen();
-
-            else if(eventData.phase === 'doubledown' && isDecider) {
+            if((eventData.phase === 'pitch' || eventData.phase === 'doubledown') && isDecider) {
                 setTimeout(function() {
-                    socket.emit((eventData.end ? 'game:next_screen' : 'game:next_player'), emitData());
-                }, 1000);
+                    socket.emit((eventData.end ? 'game:next_screen' : 'game:next_player'), emitData(true));
+                }, 600);
             }
 
             break;
