--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -136,8 +136,6 @@ var screenOpen = function(screenElement) {
 				
 				} 
 				  
-			  // group.classList.toggle("reorder");  
-			  
 			  for (var i = 0; i < total; i++) {
 			    
 			    var box = boxes[i];
@@ -161,19 +159,30 @@ var screenOpen = function(screenElement) {
 			    TweenLite.fromTo(box.node, 0.5, { x, y }, { x: 0, y: 0, ease });    
 			  }
 
-			  $('#decider').show();
-			  TweenLite.fromTo($('.next-step'), .7, {yPercent:100, autoAlpha:0}, {yPercent:0, autoAlpha:1, ease:Expo.easeOut, delay:2});
+			  // $('#decider').show();
+
+				new TimelineLite()
+				// .to($('.instruction:nth(3)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay:2 })
+				// .fromTo($('.instruction:nth(4)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
+			  .fromTo($('.next-step'), .7, {yPercent:100, autoAlpha:0}, {yPercent:0, autoAlpha:1, ease:Expo.easeOut});
 			  
 			}, 2000);
 
 		}})
+		// .to($('.coins.delta'), .01, { autoAlpha:0, display:'none' })
+		// .to($('.instruction:nth(0)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
+		// .fromTo($('.instruction:nth(1)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
 		.to($('.coins.starting'), 1, { autoAlpha:0, y:'10%', display:'none', delay: 5 })
 		.fromTo($('.coins.delta'), 1, { autoAlpha:0, y:'10%', display:'none' }, { autoAlpha:1, y:'0%', display:'block' })
 
+		// .to($('.instruction:nth(1)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
+		// .fromTo($('.instruction:nth(2)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
 		.fromTo($('.coins.delta'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, y:'10%', display:'none', delay: 5 })
 		.fromTo($('.coins.current'), 1, { autoAlpha:0, y:'10%', display:'none' }, { autoAlpha:1, y:'0%', display:'block' })
 		
-		.fromTo($('.rank.starting'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, x:'10%', display:'none' })
+		// .to($('.instruction:nth(2)'), .5, { autoAlpha:0, yPercent:-100, display:'none', delay: 5 })
+		// .fromTo($('.instruction:nth(3)'), .5, { autoAlpha:0, yPercent:-100, display:'none' }, { autoAlpha:1, yPercent:0, display:'block' })
+		.fromTo($('.rank.starting'), 1, { autoAlpha:1, display:'block' }, { autoAlpha:0, x:'10%', display:'none', delay: 5 })
 		.fromTo($('.rank.current'), 1, { autoAlpha:0, x:'10%', display:'none' }, { autoAlpha:1, x:'0%', display:'block' });
 
 	}
