--- a/templates/partials/shared/doubledown.hbs
+++ b/templates/partials/shared/doubledown.hbs
@@ -87,7 +87,7 @@
 		{{> component/instructions
 				active_player=player.isActive
 				heading="Choose an option below"
-				body="Please select buy time  or to pass by pressing one of the buttons below."
+				body="Please select buy time or pass by pressing one of the buttons below."
 		}}
 
 		{{!-- inactive player --}}
