--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -8,6 +8,7 @@
 {{!-- Decide phase --}}
 {{#ifeq pitches true}}
 
+	{{!-- Decider modal --}}
 	{{#ifeq decider true}} 
 
 		<div class="modal inner-modal {{showHide this}}">
@@ -26,6 +27,7 @@
 			</div>
 		</div>
 
+	{{!-- Non-decider modal --}}
 	{{else}}
 
 		<div class="modal inner-modal {{showHide this}}">
@@ -52,22 +54,24 @@
 {{!-- Pitch and Double-down phase choice modals --}}
 {{else}}
 
+	{{!-- Active player's modal --}}
 	{{#ifeq active_player true}}
 
-		<div id="more-time-wrapper" class="{{showHide this}} inner-modal modal" data-clone="true">
+		<div id="more-time-wrapper" class="{{showHide this}} inner-modal modal" data-clone="true" data-wait="true">
 			<div class="form choice inner pitch-box" id="more-time">
 
-		{{#ifeq doubledown true}}
+				{{#ifeq doubledown true}}
 
-			  <h1>Pay <strong>{{config.doubledownTimeCost}} coins</strong> to the pot to double down?</h1>
-			  <h2>For {{config.doubledownTimeCost}} coins, the floor is yours exclusively for {{config.doubledownSeconds}} seconds.</h2>
+				  <h1>Pay <strong>{{config.doubledownTimeCost}} coins</strong> to the pot to double down?</h1>
+				  <h2>For {{config.doubledownTimeCost}} coins, the floor is yours exclusively for {{config.doubledownSeconds}} seconds.</h2>
 
-		{{else}}
+				{{else}}
 
-			  <h1>Pay <strong>{{config.extraTimeCost}} coins</strong> to the pot continue pitching?</h1>
-			  <h2>Recieve an additional {{config.extraSeconds}} seconds to continue pitching your proposal.</h2>
+				  <h1>Pay <strong>{{config.extraTimeCost}} coins</strong> to the pot to continue pitching?</h1>
+				  <h2>Recieve an additional {{config.extraSeconds}} seconds to continue pitching your proposal.</h2>
 
-		{{/ifeq}}
+				{{/ifeq}}
+
 			  <button id="btn-more-time" data-event="game:more_time" data-keep_enabled="true" data-package="{{player.uid}}" class="post-button submit btn" type="submit" name="submit">
 			    <div class="coins">
 
@@ -84,6 +88,7 @@
 			    Not enough coins!
 		    </button>
 			  <button id="btn-cancel" data-event="game:turn_done" class="post-button submit btn" type="submit" name="submit">No thanks!</button>
+
 			</div>
 		</div>
 
@@ -91,9 +96,10 @@
 		  <span id="modifier" class="hidden-el" data-inner_modal="true"></span>
 		{{/ifeq}}
 
+	{{!-- Waiting for other player --}}
 	{{else}}
 
-		<div id="more-time-wrapper" class="{{showHide this}} modal inner-modal" data-clone="true">
+		<div id="more-time-wrapper" class="{{showHide this}} modal inner-modal" data-clone="true" data-wait="true">
 			<div class="inner">
 				<div id="player-{{activePlayer.index}}" class="player-logo lg">
 			  </div>
