--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -573,19 +573,28 @@
 				closeAnim.play();
 
 			});
+				
+			// GA include
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 			{{#ifeq environment "production"}}
-				
-				// GA include
-				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			  ga('create', 'UA-64617433-4', 'auto');
+				ga('create', 'UA-64617433-7', 'auto');
 			  ga('send', 'pageview');
 
-			{{else}}
+			{{/ifeq}}
+
+			{{#ifeq environment "staging"}}
+
+			  ga('create', 'UA-64617433-6', 'auto');
+			  ga('send', 'pageview');
+
+			{{/ifeq}}
+
+			{{#ifeq environment "development"}}
 
 				if(!isPrivate) {
 					// For socket debugging
@@ -691,6 +700,9 @@
 					      $('#lobby').addClass('wait');
 
 						    $('#player-name').val(data.decider);
+
+		            ga('send', 'event', 'Login', 'Username', data.decider);
+		            
 							}
 						})
 						.fail(function(xhr, status, error) {
